--- a/2022-2023/Programming Level-up/7.introduction-to-pandas.org
+++ b/2022-2023/Programming Level-up/7.introduction-to-pandas.org
@@ -1,27 +1,9 @@
-#+options: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline author:t
-#+options: broken-links:nil c:nil creator:nil d:(not "LOGBOOK") date:t e:t email:nil
-#+options: f:t inline:t num:t p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
-#+options: timestamp:t title:t toc:t todo:t |:t
 #+title: Programming Level-up
 #+SUBTITLE: An Introduction to Pandas
-#+date:
 #+author: Jay Morgan
-#+language: en
-#+select_tags: export
-#+exclude_tags: noexport
-#+creator: Emacs 27.1 (Org mode 9.4.6)
-#+cite_export:
-
-#+startup: beamer
-#+LATEX_CLASS: beamer
-#+LATEX_CLASS_OPTIONS: [10pt]
-#+BEAMER_FRAME_LEVEL: 2
-#+BEAMER_THEME: Berkeley
-#+LATEX_HEADER: \setlength{\parskip}{5pt}
-#+LATEX_HEADER: \newcommand{\footnoteframe}[1]{\footnote[frame]{#1}}
-#+LaTeX_HEADER: \addtobeamertemplate{footnote}{}{\vspace{2ex}}
-#+LATEX_HEADER: \usepackage{tabularx}
-
+#+STARTUP: beamer
+#+DATE:
+#+include: ./header.org
 #+PROPERTY: header-args:python :eval never-export
 
 #+name: commentify
@@ -35,24 +17,6 @@
 #+RESULTS: commentify
 : Results: 
 : # => 
-
-#+begin_src emacs-lisp :exports none
-(setq org-latex-minted-options
-      '(("frame" "lines")
-	("linenos=true")
-	("firstnumber=last")
-	("fontsize=\\footnotesize")
-	("xleftmargin=15pt")
-	("numbersep=8pt")))
-#+end_src
-
-#+RESULTS:
-| frame                  | lines |
-| linenos=true           |       |
-| firstnumber=last       |       |
-| fontsize=\footnotesize |       |
-| xleftmargin=15pt       |       |
-| numbersep=8pt          |       |
 
 * Pandas
 
@@ -304,6 +268,25 @@ https://docs.python.org/3/tutorial/controlflow.html#lambda-expressions
 This lambda expression will double its input, and therefore applying this
 function to every element will double all values in 'sepal length (cm)'.
 
+*** Apply operation to entire row
+
+In the previous example, we saw the use of =.apply=, where a function is
+applied to each individual element in a column. With =apply=, it's also
+possible to apply a function to each row of a dataframe, by specifying
+=axis=1= in the call to =apply=:
+
+#+begin_src python
+# some df with value column defined here
+
+def window_sum(row, window=5):
+    """Take a sum of rows within a window"""
+    curr_index = row.name  # access the row index number using .name
+    row["moving_avg"] = df.loc[curr_index-window:curr_index, "value"].sum()
+    return row  # return the updated row
+
+updated_df = df.apply(moving_avg, axis=1)
+#+end_src
+
 *** Merge
 
 Many pandas dataframes can be combined together using the =concat= method that
@@ -444,3 +427,8 @@ df["col1"].dt.year # or df["col1"].dt.month etc
 
 #+ATTR_LATEX: :width 0.3\textwidth
 [[file:images/year.png]]
+
+  
+# Local Variables:
+# org-latex-minted-options: (("frame" "lines") ("linenos=true") ("firstnumber=last") ("fontsize=\\footnotesize") ("bgcolor=LightGray") ("xleftmargin=5pt") ("tabsize=2") ("breaklines=true") ("numbersep=10pt"))
+# End:
